Added "score" with jQuer

--- a/index.htm
+++ b/index.htm
@@ -6,6 +6,9 @@
 		<script type="text/javascript" src="game.js"></script>
 	</head>
 	<body style="text-align:center">
+        <div id="score">
+            Score: <span></span>
+        </div>
 	<canvas id="canvas" width="400" height="400" onclick="gamerun()" style="background-color:black"></canvas>
 	<p>Click the black square to begin. Use arrow keys to move.</p>
 	<p>Try to eat as many food pellets as possible without hitting the square walls or yourself.</p>
