Added a replay button to replay the last game
Replay can be done for the last game. The game saves all of the played
games, and this can be used in order to replay all the games in the
current session.

--- a/index.htm
+++ b/index.htm
@@ -12,5 +12,6 @@
 	<canvas id="canvas" width="450" height="450" onclick="gamerun()" style="background-color:black"></canvas>
 	<p>Click the black square to begin. Use arrow keys to move.</p>
 	<p>Try to eat as many food pellets as possible without hitting the square walls or yourself.</p>
+        <button onclick="replay()">Replay</button>
 	</body>
 </html>
